feat/add-priv-event-stream-auth-reads
